fixtures/errors/undeclared_var.expected
exit_code: 1
--- stdout ---
--- stderr ---
Error: error: undeclared identifier `z`
 --> errors/undeclared_var.js:1:13
1 | console.log(z);
  |             ^

